--- a/learn_html/assets/css/styles.css
+++ b/learn_html/assets/css/styles.css
@@ -50,13 +50,13 @@ h1, h2 {
     width: 50%;
 }
 
-h3 {
+.flex-container > div > h3 {
     background-color: grey;
     margin: 10px;
     padding: 20px;
 }
 
-article {
+.flex-container > div > article {
     margin: 10px;
     padding: 20px;
 }
