add media print to print the CV

--- a/learn_html/assets/css/styles.css
+++ b/learn_html/assets/css/styles.css
@@ -87,3 +87,10 @@ button:hover {
     overflow: hidden;
     transition: 0.2s ease-out;
 }
+
+@media print {
+    nav {
+        max-height: 0;
+        visibility: hidden;
+    }
+}
