--- a/learn_html/assets/css/styles.css
+++ b/learn_html/assets/css/styles.css
@@ -94,3 +94,9 @@ button:hover {
         visibility: hidden;
     }
 }
+
+@media screen and (max-width: 1100px) {
+    .flex-container > div {
+        width: 100%;
+    }
+}
