--- a/learn_html/assets/css/styles.css
+++ b/learn_html/assets/css/styles.css
@@ -63,12 +63,12 @@ h1, h2 {
     width: 50%;
 }
 
-.containerPage {
+.pageContainer {
     margin: 10px;
     padding: 20px;
 }
 
-.containerPage > h3 {
+.pageContainer > h3 {
     text-align: center;
 }
 
