--- a/learn_html/assets/css/styles.css
+++ b/learn_html/assets/css/styles.css
@@ -11,7 +11,6 @@ nav {
 nav > div {
     margin: 10px;
     padding: 20px;
-    font-size: 30px;
     color: white;
 }
 
@@ -64,18 +63,18 @@ h1, h2 {
 }
 
 .pageContainer {
-    margin: 10px;
-    padding: 20px;
-}
-
-.pageContainer > h3 {
-    text-align: center;
+    margin: 10px 0;
+    padding: 20px 0;
 }
 
 button {
     width: 100%;
     border: none;
     border-bottom: 1px solid #ddd;
+}
+
+button > h3 {
+    margin: 10px;
 }
 
 button:hover {
@@ -86,6 +85,10 @@ button:hover {
     max-height: 0;
     overflow: hidden;
     transition: 0.2s ease-out;
+}
+
+.panel > ul {
+    margin: 10px;
 }
 
 @media print {
