move inline style to css file

--- a/learn_html/assets/css/styles.css
+++ b/learn_html/assets/css/styles.css
@@ -92,6 +92,11 @@ button:hover {
     margin: 10px;
 }
 
+iframe {
+    width: 100vw;
+    height: 50vh;
+}
+
 @media print {
     nav {
         max-height: 0;
