--- a/learn_html/assets/css/styles.css
+++ b/learn_html/assets/css/styles.css
@@ -116,4 +116,8 @@ iframe {
         padding: 0px;
         width: 100%;
     }
+    iframe {
+        width: 100%;
+        height: 400px;
+    }
 }
