--- a/learn_html/assets/css/styles.css
+++ b/learn_html/assets/css/styles.css
@@ -104,7 +104,7 @@ iframe {
     }
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 768px) {
     .flex-container > div {
         width: 100%;
     }
@@ -112,12 +112,21 @@ iframe {
         justify-content: normal;
     }
     nav > div {
-        margin: 10px;
+        margin: 10px 20px;
         padding: 0px;
         width: 100%;
     }
     iframe {
         width: 100%;
         height: 400px;
+    }
+    .mobile-hide {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .navbar-toggler {
+        display: none;
     }
 }
