readjust for mobile view

--- a/learn_html/assets/css/styles.css
+++ b/learn_html/assets/css/styles.css
@@ -123,6 +123,9 @@ iframe {
     .mobile-hide {
         display: none;
     }
+    .col-sm-6 {
+        margin-bottom: 10px;
+    }
 }
 
 @media screen and (min-width: 992px) {
